--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
       android:name=".MainApplication"
@@ -22,5 +27,24 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+      
+      <activity
+        android:name=".OverlayActivity"
+        android:label="Wellbeing Overlay"
+        android:theme="@android:style/Theme.Translucent.NoTitleBar"
+        android:taskAffinity=""
+        android:excludeFromRecents="true"
+        android:exported="false" />
+      
+      <service
+        android:name=".AppDetectionService"
+        android:enabled="true"
+        android:exported="false"
+        android:foregroundServiceType="specialUse" />
+        
+      <service
+        android:name=".PersistentOverlayService"
+        android:enabled="true"
+        android:exported="false" />
     </application>
 </manifest>
