working base app

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -46,5 +46,11 @@
         android:name=".PersistentOverlayService"
         android:enabled="true"
         android:exported="false" />
+        
+      <service
+        android:name=".IntentionTimerService"
+        android:enabled="true"
+        android:exported="false"
+        android:foregroundServiceType="specialUse" />
     </application>
 </manifest>
