--- a/package.json
+++ b/package.json
@@ -12,19 +12,15 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native/new-app-screen": "0.80.2",
-    "@react-navigation/native": "^7.1.16",
-    "@react-navigation/stack": "^7.4.4",
     "react": "19.1.0",
     "react-native": "0.80.2",
-    "react-native-device-info": "^14.0.4",
-    "react-native-safe-area-context": "^5.5.2",
-    "react-native-screens": "^4.13.1"
+    "react-native-device-info": "^14.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "19.1.1",
+    "@react-native-community/cli": "^19.1.1",
     "@react-native-community/cli-platform-android": "19.1.1",
     "@react-native-community/cli-platform-ios": "19.1.1",
     "@react-native/babel-preset": "0.80.2",
